@@ -534,7 +534,7 @@ void printParameterHeaderToFile(FILE * dump);
 
 
 //************************************************************************************************************************************************
-void waveformTemplate(struct parset *par, struct interferometer *ifo[], int ifonr, int waveformVersion, struct runPar run);
+void waveformTemplate(struct parset *par, struct interferometer *ifo[], int ifonr, int waveformVersion, int injectionWF, struct runPar run);
 void templateApo(struct parset *par, struct interferometer *ifo[], int ifonr);
 		  
 
@@ -554,14 +554,14 @@ void LALfreedom(CoherentGW *waveform);
 
 //************************************************************************************************************************************************
 
-double netLogLikelihood(struct parset *par, int networkSize, struct interferometer *ifo[], int waveformVersion, struct runPar run);
-double IFOlogLikelihood(struct parset *par, struct interferometer *ifo[], int i, int waveformVersion, struct runPar run);
-double signalToNoiseRatio(struct parset *par, struct interferometer *ifo[], int i, int waveformVersion, struct runPar run);
-double overlapWithData(struct parset *par, struct interferometer *ifo[], int ifonr, int waveformVersion, struct runPar run);
-double parMatch(struct parset *par1,struct parset *par2, struct interferometer *ifo[], int networkSize, int waveformVersion, struct runPar run);
-double parOverlap(struct parset *par1, struct parset *par2, struct interferometer *ifo[], int ifonr, int waveformVersion, struct runPar run);
+double netLogLikelihood(struct parset *par, int networkSize, struct interferometer *ifo[], int waveformVersion, int injectionWF, struct runPar run);
+double IFOlogLikelihood(struct parset *par, struct interferometer *ifo[], int i, int waveformVersion, int injectionWF, struct runPar run);
+double signalToNoiseRatio(struct parset *par, struct interferometer *ifo[], int i, int waveformVersion, int injectionWF, struct runPar run);
+double parMatch(struct parset *par1,struct parset *par2, struct interferometer *ifo[], int networkSize, int waveformVersion, int injectionWF, struct runPar run);
+double overlapWithData(struct parset *par, struct interferometer *ifo[], int ifonr, int waveformVersion, int injectionWF, struct runPar run);
+double parOverlap(struct parset *par1, struct parset *par2, struct interferometer *ifo[], int ifonr, int waveformVersion, int injectionWF, struct runPar run);
 double vecOverlap(fftw_complex *vec1, fftw_complex *vec2, double * noise, int j1, int j2, double deltaFT);
-void signalFFT(fftw_complex * FFTout, struct parset *par, struct interferometer *ifo[], int ifonr, int waveformVersion, struct runPar run);
+void signalFFT(fftw_complex * FFTout, struct parset *par, struct interferometer *ifo[], int ifonr, int waveformVersion, int injectionWF, struct runPar run);
 double matchBetweenParameterArrayAndTrueParameters(double * pararray, struct interferometer *ifo[], struct MCMCvariables mcmc, struct runPar run);
 //void computeFishermatrixIFO(struct parset *par, int npar, struct interferometer *ifo[], int networkSize, int ifonr, double **matrix);
 //void computeFishermatrix(struct parset *par, int npar, struct interferometer *ifo[], int networkSize, double **matrix);
